Adds ability to view individual spaces

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,6 +1,11 @@
 "Makers BNB"
+
 <% @spaces.each do |space| %>
-<a href="/spaces/<%= space.id %>">
- <li><%= space.title %></li>
-</a>
+<hr>
+  <%= space.title %>
+  <form action="/spaces/<%= space.id %>" method="get">
+    <input type="submit" name="view-space-<%=space.id%>" value="View Space">
+  </form>
+
+
 <% end %>
