--- a/views/spaces/view.erb
+++ b/views/spaces/view.erb
@@ -1,4 +1,4 @@
-<h2><%= @space.title %></h2>
+<h2><%= @space.name %></h2>
 <p><%= @space.description %></p>
 <p>£<%= @space.price %> per night</p>
 
