Updates to HTML page and some refactoring of naming

--- a/views/index.erb
+++ b/views/index.erb
@@ -2,12 +2,8 @@
 
 <% @properties.each do |property| %>
 <hr>
-  <%= property.name %>
-  <br>
   <%= property.description %>
-  <form action="/spaces/<%= property.id %>" method="get">
-    <input type="submit" name="view-space-<%=property.id%>" value="View Space">
+  <form action="/property/<%= property.id %>" method="get">
+    <input type="submit" name="view-property-<%=property.id%>" value="View Property">
   </form>
-
-
 <% end %>
