- Created sign up page. - Controller parses new user details and creates new instance within users database.

--- a/views/user/new.erb
+++ b/views/user/new.erb
@@ -7,12 +7,12 @@
   <body>
     <p>Please enter your details below:</p>
 
-    <form class="user-details" action="user/create" method="post">
+    <form class="user-details" action="/user/create" method="post">
       <input type="text" name="username" placeholder="Username">
-      <input type="text" name="password" placeholder="Password">
+      <input type="password" name="password" placeholder="Password">
       <input type="text" name="first_name" placeholder="First Name">
       <input type="text" name="last_name" placeholder="Last Name">
-      <input type="text" name="email" placeholder="email@website.com">
+      <input type="email" name="email" placeholder="email@website.com">
       <input type="text" name="phone_number" placeholder="Phone Number">
       <input type="submit" value="Submit">
     </form>
