--- a/views/property/view.erb
+++ b/views/property/view.erb
@@ -11,7 +11,7 @@
 <h2><%= @property.description %></h2>
 <p>£<%= @property.price %> per night</p>
 
-<img style="width:430px;height:300px;" src=<%= @property.host_name %>>
+<img style="width:430px;height:300px;" src=<%= @property.photo_url %>>
 <br>
 <br>
 <style>
