--- a/views/property/view.erb
+++ b/views/property/view.erb
@@ -42,8 +42,8 @@ th, td {
 <br>
 
 If you have any questions, or would like to book the space, please contact:<br><br>
-<%= @property.host_name %><br>
-<%= @property.host_number %><br>
+# <%= @property.host_name %><br>
+# <%= @property.host_number %><br>
 <br>
 
 <form action="/">
