- Removed unnecessary files left over from ActiveRecord. - Refactored existing tests. - Removed unnecessary tests.

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,3 +1,9 @@
+<!DOCTYPE html>
+<html>
+<head>
+	<title>MakersBnB</title>
+</head>
+<body>
 <h1>Makers BNB</h1>
 <a href="/user/new">Login / Sign up</a>
 <hr>
@@ -19,10 +25,14 @@
 
 <% @properties.each do |property| %>
     <% @check_in %>
-    <% if property.date_available.to_s == @check_in %>
+    <% if property.available_from.to_s == @check_in %>
     <%= property.description %>
     <form action="/property/<%= property.id %>" method="get">
       <input type="submit" name="view-property-<%=property.id%>" value="View Property">
     </form>
   <%  end  %>
   <%  end  %>
+</body>
+</html>
+
+
