--- a/views/user/new.erb
+++ b/views/user/new.erb
@@ -10,7 +10,7 @@
     <form class="existing-user" action="/user/login" method="post">
       <input type="text" name="username" placeholder="Username">
       <input type="password" name="password" placeholder="Password">
-      <input type="submit" value="Submit">
+      <input type="submit" value="Log In">
     </form>
 
     <p><%= flash[:message] %></p>
@@ -23,9 +23,7 @@
       <input type="text" name="last_name" placeholder="Last Name">
       <input type="email" name="email" placeholder="email@website.com">
       <input type="text" name="phone_number" placeholder="Phone Number">
-      <input type="submit" value="Submit">
+      <input type="submit" value="Sign Up">
     </form>
-
-    
   </body>
 </html>
