Makes new property create fields required

--- a/views/user/details.erb
+++ b/views/user/details.erb
@@ -15,5 +15,10 @@
 		<br>
 		phonenumber: <%= @user.phone_number %>
 	</p>
+<br>
+<hr>
+<h3>Properties Listed</h3>
+<!-- **ADD MESSAGE "You don't have any properties listed", if the user has no properties -->
+<a href="/property/new">Add a new property</a>
 </body>
 </html>
