--- a/views/property/new.erb
+++ b/views/property/new.erb
@@ -7,33 +7,31 @@
   <body>
     <h1>Complete the form below to add a new property</h1>
 
-    <form class="" action="/property/create" method="post">
+    <form action="/property/create" method="post">
       <label>Title:</label>
-      <input type="text" name="Title"><br>
+      <input type="text" name="title" required><br>
       <label>Description:</label>
-      <input type="text" name="description"><br>
+      <input type="text" name="description" required><br>
       <label>Price</label>
-      <input type="text" name="price"><br>
+      <input type="text" name="price" required><br>
       <label>City:</label>
-      <input type="text" name="city"><br>
+      <input type="text" name="city" required><br>
       <label>Guests:</label>
-      <input type="text" name="guests">
+      <input type="text" name="guests" required>
       <label>Bedrooms:</label>
-      <input type="text" name="bedrooms">
+      <input type="text" name="bedrooms" required>
       <label>Beds:</label>
-      <input type="text" name="beds">
+      <input type="text" name="beds" required>
       <label>Bathrooms:</label>
-      <input type="text" name="bathrooms"><br>
+      <input type="text" name="bathrooms" required><br>
       <br>
       <label>Photo url:</label>
       <input type="text" name="photo_url">
       <label>Date from:</label>
-      <input type="date" name="date_from">
+      <input type="date" name="date_from" required>
       <label>Date to:</label>
-      <input type="date" name="date_to"><br>
+      <input type="date" name="date_to" required><br>
       <input type="submit" value="Submit">
     </form>
-
-
   </body>
 </html>
