- Edited README to included updated instructions re database setup. - Sinatra flash message for when no properties are available on a given day.

--- a/views/index.erb
+++ b/views/index.erb
@@ -23,15 +23,20 @@
   <input type="submit" name="check-availability" value="Check Availabilty">
 </form>
 
+<% @property_found = false %>
 <% @properties.each do |property| %>
     <% @check_in %>
     <% if property.available_from.to_s == @check_in %>
-    <%= property.description %>
-    <form action="/property/<%= property.id %>" method="get">
-      <input type="submit" name="view-property-<%=property.id%>" value="View Property">
-    </form>
+    <% @property_found = true %>
+    	<%= property.description %>
+    	<form action="/property/<%= property.id %>" method="get">
+      	<input type="submit" name="view-property-<%=property.id%>" value="View Property">
+    	</form>
+  	<% end %>
   <%  end  %>
-  <%  end  %>
+  <% if @property_found == false %>
+  	<%= flash[:message] %>
+  <% end %>
 </body>
 </html>
 
