added capybara test for creating a new property

--- a/views/property/new.erb
+++ b/views/property/new.erb
@@ -7,7 +7,7 @@
   <body>
     <h1>Complete the form below to add a new property</h1>
 
-    <form action="/property/create" method="post">
+    <form class="" action="/property/create" method="post">
       <label>Title:</label>
       <input type="text" name="title" required><br>
       <label>Description:</label>
@@ -33,5 +33,7 @@
       <input type="date" name="date_to" required><br>
       <input type="submit" value="Submit">
     </form>
+
+
   </body>
 </html>
