--- a/views/property/new.erb
+++ b/views/property/new.erb
@@ -7,7 +7,7 @@
   <body>
     <h1>Complete the form below to add a new property</h1>
 
-    <form class="" action="/property/create" method="post">
+    <form class="property-details" action="/property/create" method="post">
       <label>Title:</label>
       <input type="text" name="title" required><br>
       <label>Description:</label>
