fixed flash message bug of no property message appearing on log in page. Also amended incorrect password message to appear on page, rather than redirect to it. Also fixed database dump typo.

--- a/views/index.erb
+++ b/views/index.erb
@@ -35,7 +35,7 @@
   	<% end %>
   <%  end  %>
   <% if @property_found == false %>
-  	<%= flash[:message] %>
+  	<%= flash[:no_property_message] %>
   <% end %>
 </body>
 </html>
