--- a/views/user/new.erb
+++ b/views/user/new.erb
@@ -12,8 +12,8 @@
       <input type="password" name="password" placeholder="Password">
       <input type="submit" value="Log In">
     </form>
-
-    <p><%= flash[:message] %></p>
+    
+    <p><%= flash[:incorrect_password_message] %></p>
 
     <p>Sign Up:</p>
     <form class="user-details" action="/user/create" method="post">
