--- a/Public/css/new-user.css
+++ b/Public/css/new-user.css
@@ -1,3 +1,8 @@
+body {
+  background-image: url(../images/mini-lake-house.jpg);
+  background-size: cover;
+}
+
 .sign-in {
   text-align: center;
 }
