--- a/views/user/new.erb
+++ b/views/user/new.erb
@@ -6,23 +6,25 @@
     <link rel="stylesheet" type="text/css" href="/css/new-user.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   </head>
-  <body class="text-center">
-    <h3>Log In</h3>
-    <form class="sign-in" action="/user/login" method="post">
-      <input type="text" name="username" placeholder="Username">
-      <input type="password" name="password" placeholder="Password">
-      <button class="btn btn-lg btn-primary btn-block" type="submit">Log in</button>
-    </form>
-    <p><%= flash[:incorrect_password_message] %></p>
-    <h3>Sign Up</h3>
-    <form class="sign-up" action="/user/create" method="post">
-      <input type="text" name="username" placeholder="Username">
-      <input type="password" name="password" placeholder="Password">
-      <input type="text" name="first_name" placeholder="First Name">
-      <input type="text" name="last_name" placeholder="Last Name">
-      <input type="email" name="email" placeholder="email@website.com">
-      <input type="text" name="phone_number" placeholder="Phone Number">
-      <button class="btn btn-lg btn-primary btn-block" type="submit">Sign Up</button>
-    </form>
+  <div class="container_1">
+    <body class="text-center">
+      <h3>Log In</h3>
+      <form class="sign-in" action="/user/login" method="post">
+        <input type="text" name="username" placeholder="Username">
+        <input type="password" name="password" placeholder="Password">
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Log in</button>
+      </form>
+      <p><%= flash[:incorrect_password_message] %></p>
+      <h3>Sign Up</h3>
+      <form class="sign-up" action="/user/create" method="post">
+        <input type="text" name="username" placeholder="Username">
+        <input type="password" name="password" placeholder="Password">
+        <input type="text" name="first_name" placeholder="First Name">
+        <input type="text" name="last_name" placeholder="Last Name">
+        <input type="email" name="email" placeholder="email@website.com">
+        <input type="text" name="phone_number" placeholder="Phone Number">
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign Up</button>
+      </form>
+    </div>
   </body>
 </html>
