--- a/views/user/new.erb
+++ b/views/user/new.erb
@@ -15,6 +15,7 @@
         <button class="btn btn-lg btn-primary btn-block" type="submit" id="Log In">Log In</button>
       </form>
       <p><%= flash[:incorrect_password_message] %></p>
+      <p><%= flash[:user_does_not_exist_message] %></p>
       <h3>Sign Up</h3>
       <form class="sign-up" action="/user/create" method="post">
         <input type="text" name="username" placeholder="Username">
