--- a/views/property/new.erb
+++ b/views/property/new.erb
@@ -3,37 +3,72 @@
   <head>
     <meta charset="utf-8">
     <title>Add a Property</title>
+    <link rel="stylesheet" type="text/css" href="/css/new-property.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
   </head>
   <body>
     <h1>Complete the form below to add a new property</h1>
-
-    <form class="property-details" action="/property/create" method="post">
-      <label>Title:</label>
-      <input type="text" name="title" required><br>
-      <label>Description:</label>
-      <input type="text" name="description" required><br>
-      <label>Price</label>
-      <input type="text" name="price" required><br>
-      <label>City:</label>
-      <input type="text" name="city" required><br>
-      <label>Guests:</label>
-      <input type="text" name="guests" required>
-      <label>Bedrooms:</label>
-      <input type="text" name="bedrooms" required>
-      <label>Beds:</label>
-      <input type="text" name="beds" required>
-      <label>Bathrooms:</label>
-      <input type="text" name="bathrooms" required><br>
-      <br>
-      <label>Photo url:</label>
-      <input type="text" name="photo_url">
-      <label>Date from:</label>
-      <input type="date" name="date_from" required>
-      <label>Date to:</label>
-      <input type="date" name="date_to" required><br>
-      <input type="submit" value="Submit">
-    </form>
-
-
+    <div>
+      <form class="property-details" action="/property/create" method="post">
+        <div class="container-1">
+          <section class="input-field">
+            <i class="fas fa-edit"></i>
+            <label>Title:</label>
+            <input type="text" name="title" required>
+          </section>
+          <section class="input-field">
+            <i class="fas fa-pencil-alt"></i>
+            <label>Description:</label>
+            <input type="text" name="description" required>
+          </section>
+          <section class="input-field">
+            <i class="fas fa-hand-holding-usd"></i>
+            <label>Price</label>
+            <input type="text" name="price" required>
+          </section>
+          <section class="input-field">
+            <i class="fas fa-city"></i>
+            <label>City:</label>
+            <input type="text" name="city" required>
+          </section>
+        </div>
+        <div class="container-2">
+          <section class="input-field">
+            <i class="fas fa-users"></i>
+            <label>Guests:</label>
+            <input type="text" name="guests" required>
+          </section>
+          <section class="input-field">
+            <i class="fas fa-door-open"></i>
+            <label>Bedrooms:</label>
+            <input type="text" name="bedrooms" required>
+          </section>
+          <section class="input-field">
+            <i class="fas fa-bed"></i>
+            <label>Beds:</label>
+            <input type="text" name="beds" required>
+          </section>
+          <section class="input-field">
+            <i class="fas fa-bath"></i>
+            <label>Bathrooms:</label>
+            <input type="text" name="bathrooms" required>
+          </section>
+          <section class="input-field">
+            <i class="fas fa-camera"></i>
+            <label>Photo url:</label>
+            <input type="text" name="photo_url">
+          </section>
+        </div>
+        <div class="container-3">
+          <i class="fas fa-calendar-alt"></i>
+          <label>Date from:</label>
+          <input type="date" name="date_from" required>
+          <label>Date to:</label>
+          <input type="date" name="date_to" required>
+          <input type="submit" value="Submit">
+        </div>
+      </form>
+    </div>
   </body>
 </html>
